Finished on Todo, the previous version of this Todo was in html and css form. Now Todo is ready with JS!

--- a/HTML/misol.html
+++ b/HTML/misol.html
@@ -12,10 +12,12 @@
 <body>
     <h1>Todos</h1>
     <ul>
+        <h2>h2 elementi</h2>
         <li>By milk 🥛</li>
         <li>Read a book 📖</li>
         <li>Play the guitar 🎸</li>
         <li>Play the bills 💵</li>
+        <div>Bu div elementi </div>
     </ul>
 
     <button>CLICK ME</button>
