Modal Start BMW

--- a/HTML/misol.html
+++ b/HTML/misol.html
@@ -2,26 +2,51 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JavaScript Click Event</title>
-    <link rel="stylesheet" href="/CSS/index.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Modal</title>
+
+    <!-- FONT AWESOME -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- STYLE -->
+    <link rel="stylesheet" href="/CSS/index.css">
 </head>
 
 <body>
-    <h1>Todos</h1>
-    <ul>
-        <h2>h2 elementi</h2>
-        <li>By milk 🥛</li>
-        <li>Read a book 📖</li>
-        <li>Play the guitar 🎸</li>
-        <li>Play the bills 💵</li>
-        <div>Bu div elementi </div>
-    </ul>
 
-    <button>CLICK ME</button>
+    <div class="wrapper">
+        <button class="btn show-btn" id="show-btn">
+            Show Modal
+        </button>
 
+        <!-- Modal -->
+        <div class="modal hidden" id="modal">
+            <!-- Modal Header -->
+            <div class="modal-header">
+                <h3>I love BMW ❤️</h3>
+                <button class="btn close-btn" id="close-btn">
+                    <i class="fas fa-close"></i>
+                </button>
+            </div>
+            <!-- MODAL BODY -->
+            <div class="modal-body">
+                <h2 class="modal-title">Modal Title</h2>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur non cupiditate iste. Sunt non
+                    incidunt illo porro magnam consequuntur doloribus, reprehenderit, unde aliquam libero tempora harum
+                    fugiat iste quas a. Dolores debitis quas distinctio voluptate. Facilis expedita illo laborum, eos
+                    asperiores quia vero iusto vitae?
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <!-- OVERLAY -->
+    <div class="overlay hidden" id="overlay"></div>
+
+    <!-- JS -->
     <script src="/JS/app.js"></script>
 </body>
 
