--- a/HTML/misol.html
+++ b/HTML/misol.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modal</title>
+    <title>Forms</title>
 
     <!-- FONT AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -16,35 +16,13 @@
 
 <body>
 
-    <div class="wrapper">
-        <button class="btn show-btn" id="show-btn">
-            Show Modal
-        </button>
+    <h1>Forms</h1>
 
-        <!-- Modal -->
-        <div class="modal hidden" id="modal">
-            <!-- Modal Header -->
-            <div class="modal-header">
-                <h3>I love BMW ❤️</h3>
-                <button class="btn close-btn" id="close-btn">
-                    <i class="fas fa-close"></i>
-                </button>
-            </div>
-            <!-- MODAL BODY -->
-            <div class="modal-body">
-                <h2 class="modal-title">Modal Title</h2>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur non cupiditate iste. Sunt non
-                    incidunt illo porro magnam consequuntur doloribus, reprehenderit, unde aliquam libero tempora harum
-                    fugiat iste quas a. Dolores debitis quas distinctio voluptate. Facilis expedita illo laborum, eos
-                    asperiores quia vero iusto vitae?
-                </p>
-            </div>
-        </div>
-    </div>
+    <form id="signup-form">
+        <input type="text" id="username" placeholder="username">
+        <button type="submit">Submit</button>
+    </form>
 
-    <!-- OVERLAY -->
-    <div class="overlay hidden" id="overlay"></div>
 
     <!-- JS -->
     <script src="/JS/app.js"></script>
