--- a/HTML/misol.html
+++ b/HTML/misol.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forms</title>
+    <title>Forms </title>
 
     <!-- FONT AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -16,13 +16,14 @@
 
 <body>
 
-    <h1>Forms</h1>
+    <h1>Forms </h1>
 
     <form id="signup-form">
         <input type="text" id="username" placeholder="username">
         <button type="submit">Submit</button>
     </form>
 
+    <div id="message"></div>
 
     <!-- JS -->
     <script src="/JS/app.js"></script>
