--- a/HTML/misol.html
+++ b/HTML/misol.html
@@ -15,13 +15,11 @@
 </head>
 
 <body>
-    <h1>regEX</h1>
-    <form id="signup-form">
-        <input type="text" id="username" placeholder="username">
-        <button type="submit">Submit</button>
-    </form>
-    <div id="message"></div>
-
+    <div id="insert">
+        <div class="key">
+            Press any key to get the keyCode
+        </div>
+    </div>
     <!-- JS -->
     <script src="/JS/app.js"></script>
 </body>
