--- a/HTML/misol.html
+++ b/HTML/misol.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>regEX</title>
+    <title>Random Gradient Color</title>
 
     <!-- FONT AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -15,11 +15,14 @@
 </head>
 
 <body>
-    <div id="insert">
-        <div class="key">
-            Press any key to get the keyCode
-        </div>
+    <div class="container">
+        <h1>Random Gradient Color</h1>
+        <small>click me</small>
     </div>
+    <p class="color-text">linear-gradient(43deg,#413f81,#c850c0, #ffcc70)</p>
+    <small class="copyright">
+        <a href="https://www.github.com/khusniddiniskandarov">Khusniddin Iskandarov</a>
+    </small>
     <!-- JS -->
     <script src="/JS/app.js"></script>
 </body>
