--- a/HTML/misol.html
+++ b/HTML/misol.html
@@ -4,25 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Gradient Color</title>
-
-    <!-- FONT AWESOME -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Start Pouse</title>
     <!-- STYLE -->
     <link rel="stylesheet" href="/CSS/index.css">
 </head>
 
 <body>
+
     <div class="container">
-        <h1>Random Gradient Color</h1>
-        <small>click me</small>
+        <h1>0</h1>
+        <button>start</button>
+        <button>pouse</button>
     </div>
-    <p class="color-text">linear-gradient(43deg,#413f81,#c850c0, #ffcc70)</p>
-    <small class="copyright">
-        <a href="https://www.github.com/khusniddiniskandarov">Khusniddin Iskandarov</a>
-    </small>
+
     <!-- JS -->
     <script src="/JS/app.js"></script>
 </body>
